@@ -1,7 +1,7 @@
 Package: MPTinR
 Type: Package
 Title: Analyze Multinomial Processing Tree Models
-Version: 1.6.1
+Version: 1.6.2
 Date: 2014-10-20
 Authors@R: c(person("Henrik", "Singmann", role = c("aut", "cre"),
     email = "henrik.singmann@psychologie.uni-freiburg.de"),
